# finite-difference-solver

./: CMakeLists.txt  README.md
include/PDE/: heat_pde.h
src/: heat_pde.cpp  matrix.cpp  matrix.h  tri_diag_solver.cpp  tri_diag_solver.h
tests/: grid.txt  main.cpp  plot.py  solution.txt  test_heat_pde.cpp  test_matrix.cpp  test_tri_diag_solver.cpp
